@@ -1,49 +1,74 @@
+//package com.hamch.apigatewayservice.config;
 //
-//  package com.hamch.apigatewayservice.config;
-//  
-//
-//  import org.springframework.context.annotation.Bean;
-//  import org.springframework.context.annotation.Configuration;
-//import org.springframework.context.annotation.Profile;
+//import org.springframework.context.annotation.Bean;
+//import org.springframework.context.annotation.Configuration;
 //import org.springframework.security.config.Customizer;
-//  import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+//import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 //import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+//import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+//import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 //import org.springframework.security.web.SecurityFilterChain;
-//  import org.springframework.web.cors.CorsConfiguration;
-//  import org.springframework.web.cors.CorsConfigurationSource;
-//  import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+//import org.springframework.web.cors.CorsConfiguration;
+//import org.springframework.web.cors.CorsConfigurationSource;
+//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+//
 //
 //import java.util.Arrays;
-//import java.util.List;
 //
-//  @Configuration
-//  @EnableWebSecurity
-//  //@Profile("JWT")
+//@Configuration
+//@EnableWebSecurity
+//@EnableMethodSecurity(prePostEnabled = true)
+//public class SecurityConfig {
+//	
+//    private JwtAuthConverter jwtAuthConverter;
 //
-//  public class SecurityConfig {
+//    public SecurityConfig(JwtAuthConverter jwtAuthConverter) {
+//        this.jwtAuthConverter = jwtAuthConverter;
+//    }
 //
-//      private final String[] freeResourceUrls = {"/**","/swagger-ui.html", "/swagger-ui/**", "/v3/api-docs/**",
-//              "/swagger-resources/**", "/api-docs/**", "/aggregate/**", "/actuator/prometheus"};
+//    @Bean
+//    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+//    	
+//    	 System.out.println("TTTTTTTTTTTTTvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv");
+//        return http
+//                .cors(Customizer.withDefaults())
+//                .authorizeHttpRequests(ar->ar.requestMatchers("/**").permitAll())
+//                //.authorizeHttpRequests(ar->ar.requestMatchers("/api/customer/**").hasAnyAuthority("USER"))
+//         //       .authorizeHttpRequests(ar->ar.requestMatchers("/**").hasAuthority("USER"))
+//               // .authorizeHttpRequests(ar->ar.anyRequest().authenticated())
+//                .csrf(csrf->csrf.disable())
+//                .oauth2ResourceServer((ors->ors.jwt(jwt->jwt.jwtAuthenticationConverter(jwtAuthConverter))))
+//                .headers(h->h.frameOptions(fo->fo.disable()))
+//                //.csrf(csrf->csrf.ignoringRequestMatchers("/h2-console/**"))
+//                .build();
+//    }
+//    
+//    private static JwtAuthenticationConverter jwtAuthenticationConverter()
+//    {
+//      	 System.out.println("fffffffffffffffffffffffffffff");
 //
-//      @Bean
-//      public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
-//          return httpSecurity.authorizeHttpRequests(authorize -> authorize
-//                          .requestMatchers(freeResourceUrls)
-//                          .permitAll()
-//                          .anyRequest().authenticated())
-//                  .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-//                  .oauth2ResourceServer(oauth2 -> oauth2.jwt(Customizer.withDefaults()))
-//                  .build();
-//      }
+//        var jwtGrantedAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
+//        jwtGrantedAuthoritiesConverter.setAuthoritiesClaimName("resource_access.user.roles");
+//        jwtGrantedAuthoritiesConverter.setAuthorityPrefix("ROLE_");
+//        var jwtAuthenticationConverter = new JwtAuthenticationConverter();
+//        jwtAuthenticationConverter.setJwtGrantedAuthoritiesConverter(jwtGrantedAuthoritiesConverter);
+//        return jwtAuthenticationConverter;
+//    }
+//   
+//    @Bean
+//    CorsConfigurationSource corsConfigurationSource() {
+//      	 System.out.println("rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr");
 //
-//      @Bean
-//      CorsConfigurationSource corsConfigurationSource() {
-//          CorsConfiguration configuration = new CorsConfiguration();
-//          configuration.applyPermitDefaultValues();
-//          configuration.setAllowedOrigins(Arrays.asList("*", "http://localhost:4200"));
-//          configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"));
-//          UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//          source.registerCorsConfiguration("/**", configuration);
-//          return source;
-//      }
-//  }
+//        CorsConfiguration configuration = new CorsConfiguration();
+//     //   configuration.addAllowedOrigin(Arrays.asList("http://localhost:4200"));
+//        //configuration.addAllowedOrigin("http://localhost:4200");
+//        configuration.setAllowedMethods(Arrays.asList("*"));
+//        configuration.setAllowedHeaders(Arrays.asList("*"));
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//        return source;
+//    }
+//
+//
+//}
